Swapping raw query for templated query specialization
